[package]
name = "swiftnav-rs"
version = "0.5.2-alpha.0"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"
description = "GNSS positioning and related utilities"
readme = "README.md"
repository = "https://github.com/swift-nav/swiftnav-rs"
license = "LGPL-3.0"

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"
