workspace(name = "swiftnav-rs")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    integrity = "sha256-8TBqrAsli3kN8BrZq8arsN8LZUFsdLTvJ/Sqsph4CmQ=",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.56.0/rules_rust-0.56.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains()

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

# Run `CARGO_BAZEL_REPIN=1 bazel sync --only=crate_index` to update dependencies
crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.Bazel.lock",
    packages = {
        "rustversion": crate.spec(version = "1.0"),
        "chrono": crate.spec(version = "0.4"),
        "strum": crate.spec(version = "0.27", features = ["derive"]),
        "nalgebra": crate.spec(version = "0.33.2"),
        "thiserror": crate.spec(version = "2.0"),
        "float_eq": crate.spec(version = "1.0.1"),
        "proptest": crate.spec(version = "1.5"),
    },
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()