[package]
name = "swiftnav-py"
version = "0.7.2-alpha.0"
edition = "2018"

[lib]
name = "swiftnav"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
swiftnav = { version = "^0.7.2-alpha.0", path = "../swiftnav/" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]