[package]
name = "swiftnav-sys"
version = "0.8.0"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"
description = "FFI bindings for libswiftnav"
readme = "../README.md"
repository = "https://github.com/swift-nav/swiftnav-rs"
license = "LGPL-3.0"
rust-version = "1.56.1"

[build-dependencies]
bindgen = "0.65"
cmake = "0.1.46"

[features]
testcpp = []
