[package]
name = "swiftnav"
version = "0.10.0"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"
description = "GNSS positioning and related utilities"
readme = "README.md"
repository = "https://github.com/swift-nav/swiftnav-rs"
license = "LGPL-3.0"
rust-version = "1.62.1"

[dependencies]
rustversion = "1.0"
chrono = { version = "0.4", optional = true }
swiftnav-sys = { version = "^0.10.0", path = "../swiftnav-sys/" }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
float_eq = "1.0.1"

# This tells docs.rs to include the katex header for math formatting
# To do this locally 
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

